# raspi_hardware_control

./: CMakeLists.txt  LICENSE  README.md  py_raspi_hw_ctrl_test.py
include/: camera_config.h  camera_control.h  hardware_control.h  image.h  motor_config.h  motor_control.h
py_src/: py_hardware_control.cpp
src/: camera_config.cpp  camera_control.cpp  hardware_control.cpp  image.cpp  main.cpp  motor_config.cpp  motor_control.cpp
